--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lotide",
+  "name": "@kebdev/lotide",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a lodash clone. This project was created and published by me as part of my learnings at Lighthouse Labs. ",
   "main": "assertArraysEqual.js",
   "scripts": {
     "test": "mocha"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/unko-chan/lotide.git"
   },
-  "author": "",
+  "author": "Kevin Liang",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/unko-chan/lotide/issues"
